--- a/css/main.css
+++ b/css/main.css
@@ -3440,7 +3440,6 @@ input[type=button].btn-block {
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
   -webkit-appearance: none;
-     -moz-appearance: none;
           appearance: none;
 }
 .custom-select:focus {
@@ -3549,7 +3548,6 @@ input[type=button].btn-block {
   padding: 0;
   background-color: transparent;
   -webkit-appearance: none;
-     -moz-appearance: none;
           appearance: none;
 }
 .custom-range:focus {
@@ -3605,8 +3603,7 @@ input[type=button].btn-block {
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  -moz-appearance: none;
-       appearance: none;
+  appearance: none;
 }
 @media (prefers-reduced-motion: reduce) {
   .custom-range::-moz-range-thumb {
@@ -5060,7 +5057,6 @@ button.close {
   background-color: transparent;
   border: 0;
   -webkit-appearance: none;
-     -moz-appearance: none;
           appearance: none;
 }
 
@@ -7042,7 +7038,6 @@ button.bg-dark:focus {
 }
 
 .position-sticky {
-  position: -webkit-sticky !important;
   position: sticky !important;
 }
 
@@ -7062,9 +7057,8 @@ button.bg-dark:focus {
   z-index: 1030;
 }
 
-@supports ((position: -webkit-sticky) or (position: sticky)) {
+@supports (position: sticky) {
   .sticky-top {
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1020;
@@ -9752,17 +9746,18 @@ header .avatar-container i {
   font-size: 20px;
   color: #ff7f00;
 }
-header .profile-options-modal .profile-options-list {
+
+.profile-options-modal .profile-options-list {
   padding: 0;
   margin: 0;
   list-style: none;
 }
-header .profile-options-modal .profile-options-list li a {
+.profile-options-modal .profile-options-list li a {
   display: block;
   padding: 10px 0;
   color: #495057;
 }
-header .profile-options-modal .profile-options-list li a i {
+.profile-options-modal .profile-options-list li a i {
   display: inline-block;
   width: 18px;
   text-align: center;
